--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "rewrites": [
     { "source": "/", "destination": "/index.html" },
-    { "source": "/à Propos", "destination": "/about.html" },
+    { "source": "/a-Propos", "destination": "/about.html" },
     { "source": "/services", "destination": "/services.html" },
     { "source": "/contact", "destination": "/contact.html" }
   ]
